// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address renders Address component 1`] = `
<DocumentFragment>
  <div
    class="FieldSet--Address"
  >
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--FirstName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="given-name"
            class="stx-input__input-element"
            id="stxField1"
            name="first_name"
            placeholder="First name (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--LastName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="family-name"
            class="stx-input__input-element"
            id="stxField2"
            name="last_name"
            placeholder="Last name (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Company"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField3"
            name="business_name"
            placeholder="address_business_name_optional"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Address"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line1"
            class="stx-input__input-element"
            id="stxField4"
            name="address_line_1"
            placeholder="Address (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Address2"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line2"
            class="stx-input__input-element"
            id="stxField5"
            name="address_line_2"
            placeholder="Apt, suite, etc."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--City"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address-level2"
            class="stx-input__input-element"
            id="stxField6"
            name="city"
            placeholder="City (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-select SelectField Field--Country"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="country"
            class="stx-select__select-element"
            id="stxField7"
            name="country"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a country
            </option>
            <option
              value="CA"
            >
              Canada
            </option>
            <option
              value="US"
            >
              United States
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-select SelectField Field--Province Field--Hidden"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="address-level1"
            class="stx-select__select-element"
            id="stxField8"
            name="province"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a province
            </option>
            <option
              value="AB"
            >
              Alberta
            </option>
            <option
              value="BC"
            >
              British Columbia
            </option>
            <option
              value="MB"
            >
              Manitoba
            </option>
            <option
              value="NB"
            >
              New Brunswick
            </option>
            <option
              value="NL"
            >
              Newfoundland and Labrador
            </option>
            <option
              value="NT"
            >
              Northwest Territories
            </option>
            <option
              value="NS"
            >
              Nova Scotia
            </option>
            <option
              value="NU"
            >
              Nunavut
            </option>
            <option
              value="ON"
            >
              Ontario
            </option>
            <option
              value="PE"
            >
              Prince Edward Island
            </option>
            <option
              value="QC"
            >
              Quebec
            </option>
            <option
              value="SK"
            >
              Saskatchewan
            </option>
            <option
              value="YT"
            >
              Yukon Territory
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Postal_Code Field--Hidden"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="postal-code"
            class="stx-input__input-element"
            id="stxField9"
            name="postal"
            placeholder="Postal code"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Phone"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="tel"
            class="stx-input__input-element"
            id="stxField10"
            name="phone_number"
            placeholder="Phone (optional)"
            type="tel"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Address renders Address component with errors 1`] = `
<DocumentFragment>
  <div
    class="FieldSet--Address"
  >
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--FirstName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="given-name"
            class="stx-input__input-element"
            id="stxField11"
            name="first_name"
            placeholder="First name (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--LastName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="family-name"
            class="stx-input__input-element"
            id="stxField12"
            name="last_name"
            placeholder="Last name (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Company"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField13"
            name="business_name"
            placeholder="address_business_name_optional"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Address"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line1"
            class="stx-input__input-element"
            id="stxField14"
            name="address_line_1"
            placeholder="Address (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Address2"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line2"
            class="stx-input__input-element"
            id="stxField15"
            name="address_line_2"
            placeholder="Apt, suite, etc."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--City"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address-level2"
            class="stx-input__input-element"
            id="stxField16"
            name="city"
            placeholder="City (optional)"
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-select SelectField Field--Country"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="country"
            class="stx-select__select-element"
            id="stxField17"
            name="country"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a country
            </option>
            <option
              value="CA"
            >
              Canada
            </option>
            <option
              value="US"
            >
              United States
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-select SelectField Field--Province Field--Hidden"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="address-level1"
            class="stx-select__select-element"
            id="stxField18"
            name="province"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a province
            </option>
            <option
              value="AB"
            >
              Alberta
            </option>
            <option
              value="BC"
            >
              British Columbia
            </option>
            <option
              value="MB"
            >
              Manitoba
            </option>
            <option
              value="NB"
            >
              New Brunswick
            </option>
            <option
              value="NL"
            >
              Newfoundland and Labrador
            </option>
            <option
              value="NT"
            >
              Northwest Territories
            </option>
            <option
              value="NS"
            >
              Nova Scotia
            </option>
            <option
              value="NU"
            >
              Nunavut
            </option>
            <option
              value="ON"
            >
              Ontario
            </option>
            <option
              value="PE"
            >
              Prince Edward Island
            </option>
            <option
              value="QC"
            >
              Quebec
            </option>
            <option
              value="SK"
            >
              Saskatchewan
            </option>
            <option
              value="YT"
            >
              Yukon Territory
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--alert stx-field--with-input Field Field--Postal_Code Field--Hidden"
      >
        <div
          class="stx-input stx-input--alert"
        >
          <input
            autocomplete="postal-code"
            class="stx-input__input-element"
            id="stxField19"
            name="postal"
            placeholder="Postal code"
            type="text"
            value=""
          />
        </div>
        <div
          class="stx-field__message"
        >
          The postal code provided is not valid.
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Phone"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="tel"
            class="stx-input__input-element"
            id="stxField20"
            name="phone_number"
            placeholder="Phone (optional)"
            type="tel"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Address renders Address component with pre-filled data 1`] = `
<DocumentFragment>
  <div
    class="FieldSet--Address"
  >
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--FirstName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="given-name"
            class="stx-input__input-element"
            id="stxField21"
            name="first_name"
            placeholder="First name (optional)"
            type="text"
            value="John"
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--LastName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="family-name"
            class="stx-input__input-element"
            id="stxField22"
            name="last_name"
            placeholder="Last name (optional)"
            type="text"
            value="Doe"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Company"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField23"
            name="business_name"
            placeholder="address_business_name_optional"
            type="text"
            value="Bold Commerce"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Address"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line1"
            class="stx-input__input-element"
            id="stxField24"
            name="address_line_1"
            placeholder="Address (optional)"
            type="text"
            value="123 Fake Street"
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Address2"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line2"
            class="stx-input__input-element"
            id="stxField25"
            name="address_line_2"
            placeholder="Apt, suite, etc."
            type="text"
            value="Unit 12"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--City"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address-level2"
            class="stx-input__input-element"
            id="stxField26"
            name="city"
            placeholder="City (optional)"
            type="text"
            value="Winnipeg"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-select SelectField Field--Country"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="country"
            class="stx-select__select-element"
            id="stxField27"
            name="country"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a country
            </option>
            <option
              value="CA"
            >
              Canada
            </option>
            <option
              value="US"
            >
              United States
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-select SelectField Field--Province"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="address-level1"
            class="stx-select__select-element"
            id="stxField28"
            name="province"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a province
            </option>
            <option
              value="AB"
            >
              Alberta
            </option>
            <option
              value="BC"
            >
              British Columbia
            </option>
            <option
              value="MB"
            >
              Manitoba
            </option>
            <option
              value="NB"
            >
              New Brunswick
            </option>
            <option
              value="NL"
            >
              Newfoundland and Labrador
            </option>
            <option
              value="NT"
            >
              Northwest Territories
            </option>
            <option
              value="NS"
            >
              Nova Scotia
            </option>
            <option
              value="NU"
            >
              Nunavut
            </option>
            <option
              value="ON"
            >
              Ontario
            </option>
            <option
              value="PE"
            >
              Prince Edward Island
            </option>
            <option
              value="QC"
            >
              Quebec
            </option>
            <option
              value="SK"
            >
              Saskatchewan
            </option>
            <option
              value="YT"
            >
              Yukon Territory
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Postal_Code"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="postal-code"
            class="stx-input__input-element"
            id="stxField29"
            name="postal"
            placeholder="Postal code"
            type="text"
            value="R3A1B3"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Phone"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="tel"
            class="stx-input__input-element"
            id="stxField30"
            name="phone_number"
            placeholder="Phone (optional)"
            type="tel"
            value="204-123-4567"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Address renders Address component with required fields 1`] = `
<DocumentFragment>
  <div
    class="FieldSet--Address"
  >
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--FirstName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="given-name"
            class="stx-input__input-element"
            id="stxField31"
            name="first_name"
            placeholder="First name"
            type="text"
            value="John"
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--LastName"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="family-name"
            class="stx-input__input-element"
            id="stxField32"
            name="last_name"
            placeholder="Last name"
            type="text"
            value="Doe"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Company"
      >
        <div
          class="stx-input"
        >
          <input
            class="stx-input__input-element"
            id="stxField33"
            name="business_name"
            placeholder="Company"
            type="text"
            value="Bold Commerce"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Address"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line1"
            class="stx-input__input-element"
            id="stxField34"
            name="address_line_1"
            placeholder="Address"
            type="text"
            value="123 Fake Street"
          />
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Address2"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address_line2"
            class="stx-input__input-element"
            id="stxField35"
            name="address_line_2"
            placeholder="Apt, suite, etc."
            type="text"
            value="Unit 12"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--City"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="address-level2"
            class="stx-input__input-element"
            id="stxField36"
            name="city"
            placeholder="City (optional)"
            type="text"
            value="Winnipeg"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-select SelectField Field--Country"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="country"
            class="stx-select__select-element"
            id="stxField37"
            name="country"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a country
            </option>
            <option
              value="CA"
            >
              Canada
            </option>
            <option
              value="US"
            >
              United States
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-select SelectField Field--Province"
      >
        <div
          class="stx-select stx-select--with-placeholder"
        >
          <select
            autocomplete="address-level1"
            class="stx-select__select-element"
            id="stxField38"
            name="province"
          >
            <option
              hidden=""
              value="___PLACEHOLDER___"
            >
              Select a province
            </option>
            <option
              value="AB"
            >
              Alberta
            </option>
            <option
              value="BC"
            >
              British Columbia
            </option>
            <option
              value="MB"
            >
              Manitoba
            </option>
            <option
              value="NB"
            >
              New Brunswick
            </option>
            <option
              value="NL"
            >
              Newfoundland and Labrador
            </option>
            <option
              value="NT"
            >
              Northwest Territories
            </option>
            <option
              value="NS"
            >
              Nova Scotia
            </option>
            <option
              value="NU"
            >
              Nunavut
            </option>
            <option
              value="ON"
            >
              Ontario
            </option>
            <option
              value="PE"
            >
              Prince Edward Island
            </option>
            <option
              value="QC"
            >
              Quebec
            </option>
            <option
              value="SK"
            >
              Saskatchewan
            </option>
            <option
              value="YT"
            >
              Yukon Territory
            </option>
          </select>
          <span
            class="stx-select__icon"
          >
            <svg
              class="stx-select-icon__icon"
              viewBox="0 0 24 24"
            >
              <path
                class="stx-select-icon__path"
                d="M3.75261265,6.34153452 C3.38894463,5.92588561 2.75718344,5.88374677 2.34153452,6.24741478 C1.92588561,6.6110828 1.88374677,7.24284399 2.24741478,7.65849291 L11.2524148,18.2364929 C11.6508167,18.6918404 12.3591606,18.6918563 12.757583,18.2365268 L21.763583,7.6585268 C22.1272697,7.24289426 22.0851593,6.61113117 21.6695268,6.24744443 C21.2538943,5.8837577 20.6221312,5.9258681 20.2584444,6.34150064 L12.0050479,16.0594019 L3.75261265,6.34153452 Z"
                fill="#6B6B6B"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="stx-field stx-field--with-input Field Field--Postal_Code"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="postal-code"
            class="stx-input__input-element"
            id="stxField39"
            name="postal"
            placeholder="Postal code"
            type="text"
            value="R3A1B3"
          />
        </div>
      </div>
    </div>
    <div
      class="FieldGroup"
    >
      <div
        class="stx-field stx-field--with-input Field Field--Phone"
      >
        <div
          class="stx-input"
        >
          <input
            autocomplete="tel"
            class="stx-input__input-element"
            id="stxField40"
            name="phone_number"
            placeholder="Phone"
            type="tel"
            value="204-123-4567"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
